k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: make-money
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: make-money
  template:
    metadata:
      labels:
        app: make-money
    spec:
      volumes:
        - name: data
          hostPath:
            path: /var/make-money
            type: DirectoryOrCreate
      containers:
        - name: make-money
          image: ghcr.io/axle-h/make-money:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: http
