k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: make-money
  labels:
    app: make-money
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: make-money
